Bug 156328 - When 'Save' is clicked, it acts like 'Save As'
Summary: When 'Save' is clicked, it acts like 'Save As'
Status: RESOLVED FIXED
Alias: None
Product: kwordquiz
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Hedlund
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-21 19:33 UTC by Avuton Olrich
Modified: 2019-02-10 00:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Avuton Olrich 2008-01-21 19:33:14 UTC
Version:           4.0.0 (using Devel)
Installed from:    Compiled sources
Compiler:          gcc-4.2.2 
OS:                Linux

When 'Save' is clicked, the expected behaviour is that it would save to the currently open file. In KWordQuiz when 'Save' is clicked a dialog box opens and the user is asked which file they would like to save to. This happens in 4.0.0 and beyond at least to revision 763037.
Comment 1 Peter Hedlund 2008-01-24 20:25:52 UTC
SVN commit 765847 by hedlund:

Don't always call Save As

BUG:156328

 M  +2 -1      kwordquiz.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=765847