Don't always call Save As

BUG:156328

svn path=/branches/KDE/4.0/kdeedu/kwordquiz/; revision=765847